2021-12-28  李俊緯  <mmemmew@gmail.com>

	Update documentation.

	Also add the options to skip invisible lines to some primitive
	commands.
