@@ -3,3 +3,6 @@
 *.cps
 *.log
 *.toc
+*.elc
+*.info
+*.pdf
